# dots

./: .gitignore  .gitmodules  APPLICATIONS.md  Brewfile  CLAUDE.md  Masfile  README.md  cargo-installs.txt  install.sh  macos-defaults.sh  npm-globals.txt  uv-tools.txt  vscode-extensions.txt
.beads/: beads.jsonl  issues.jsonl
_data/: dx-inventory.json
app-configs/: obsidian-vaults.md  raycast-extensions.txt  syncthing-config.xml
claude-thoughts/: 01-plugin-architecture-philosophy.md  02-tmux-status-bar-implementation.md  03-configuration-organization.md  04-dependency-philosophy.md  05-migration-path.md  06-zellij-fresh-port-plan.md  07-zellij-vs-tmux-evaluation.md  08-terminal-multiplexer-strategy.md  09-multiplexer-as-ai-agent-interface.md  10-nested-multiplexer-architecture.md  11-zellij-cli-analysis-verdict.md  12-fresh-hybrid-implementation-plan.md  README.md
docs/: ENHANCEMENTS.md  RETRO-OS.md
git/: .gitconfig  .gitignore_global
pake/: .gitignore  Pakefile  README.md  build.sh  next-steps.md
scripts/: setup_symlinks.sh
scripts/ideas/icli/: Cargo.toml
scripts/ideas/icli/src/: data.rs  main.rs
scripts/ideas/icli/src/commands/: analysis.rs  dotfiles.rs  ideas.rs  mod.rs  plans.rs  portfolio.rs  projects.rs  refresh.rs  search.rs  snapshot.rs  summarize.rs  util.rs
shell/: .p10k.zsh  .zimrc  .zprofile  .zshenv  .zshrc  .zshrc-claude  .zshrc-legacy  .zshrc-tuios
ssh/: config
vscode/: settings.json
wiki/: Application-Configs.md  Development-Tools.md  Home.md  Homebrew-Packages.md  Mac-App-Store.md  VS-Code-Extensions.md  _Footer.md  _Sidebar.md
(+139 files in other folders)
