[package]
name = "icli"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for ideas, projects, and plans"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
anyhow = "1"
dirs = "5"
colored = "2"
termimad = "0.30"
